--- a/app/src/main/res/layout/rich_dad_poor_dad.xml
+++ b/app/src/main/res/layout/rich_dad_poor_dad.xml
@@ -327,8 +327,7 @@
                 android:layout_marginTop="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:listitem="@layout/row" />
+                app:layout_constraintStart_toStartOf="parent" />
 
         </RelativeLayout>
 
