--- a/app/src/main/res/layout/activity_detail_audio.xml
+++ b/app/src/main/res/layout/activity_detail_audio.xml
@@ -24,7 +24,10 @@
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:src="@drawable/ic_back"
-            app:tint="@color/white" />
+            android:clickable="true"
+            android:foreground="?selectableItemBackground"
+            app:tint="@color/white"
+            android:layout_margin="5dp"/>
     </androidx.cardview.widget.CardView>
 
     <ImageView
