--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
 
     <color name="color_1">#02716A</color>
     <color name="color_2">#014D48</color>
-    <color name="color_3">#13181E</color>
+    <color name="color_3">#272B32</color>
     <color name="color_4">#878B8E</color>
     <color name="yellow">#fbff12</color>
     <color name="teal_300">#07F6DF</color>
