--- a/app/src/main/res/layout/rich_dad_poor_dad.xml
+++ b/app/src/main/res/layout/rich_dad_poor_dad.xml
@@ -21,13 +21,14 @@
             android:layout_height="50dp"
             android:background="@color/color_1">
 
-            <!--Button Menu-->
+            <!--Button Back-->
             <ImageView
+                android:id="@+id/btnBack"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_menu"
+                android:src="@drawable/ic_back"
                 android:clickable="true"
                 android:foreground="?selectableItemBackground"
                 android:layout_alignParentStart="true"
