--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -45,10 +45,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/nameChapter"
-            android:layout_toEndOf="@id/imgBook"
             android:layout_marginStart="5dp"
+            android:layout_toEndOf="@id/imgBook"
             android:text="Пешгуфтор"
-            android:textColor="@color/teal_200" />
+            android:textColor="@color/teal_200"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:scrollHorizontally="true"/>
 
 
     </RelativeLayout>
