--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     android:layout_width="match_parent"
@@ -22,23 +21,23 @@
             android:id="@+id/imgBook"
             android:layout_width="30dp"
             android:layout_height="45dp"
-            android:layout_margin="5dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:layout_margin="5dp"
             android:src="@drawable/logo_book" />
 
         <TextView
             android:id="@+id/nameChapter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:layout_toEndOf="@id/imgBook"
             android:scrollHorizontally="true"
             android:singleLine="true"
             android:text="Music"
-            android:textStyle="bold"
-            android:layout_marginStart="5dp"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/descChapter"
@@ -47,11 +46,11 @@
             android:layout_below="@+id/nameChapter"
             android:layout_marginStart="5dp"
             android:layout_toEndOf="@id/imgBook"
-            android:text="Пешгуфтор"
-            android:textColor="@color/teal_200"
-            android:singleLine="true"
             android:ellipsize="marquee"
-            android:scrollHorizontally="true"/>
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="Пешгуфтор"
+            android:textColor="@color/teal_200" />
 
 
     </RelativeLayout>
